[백승종] 수정 사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -180,7 +180,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 .w2table_sb.w2table.req{margin-right:0 !important; padding-left:0 !important;}
 
 /* table */
-.tb {width:100%;border-top: 2px solid rgb(51 51 51);border-right:1px solid #b0b2b1;margin-bottom:10px;}
+.tb {width:100%;border-top: 2px solid rgb(51 51 51);border-right:1px solid #b0b2b1;/* margin-bottom:10px; */}
 .tb .w2tb_th,.tb .w2tb_td{height:19px;border:0;border-left:1px solid #b0b2b1;border-bottom:1px solid #b0b2b1;box-sizing:border-box;}
 .tb tbody .w2tb_th{line-height:19px;color:#3b3b3b;padding:3px 4px 6px 8px;background: #f7f7f7;text-align:left;}
 .tb tbody .w2tb_th.tac{text-align:center}
@@ -222,9 +222,11 @@ a:hover,a:active,a:focus{text-decoration:none}
 		 border-top: 2px solid #333333;
 		 }
 .cm_grid.left{height:100%;} /* 왼쪽 그리드 높이 */
-.cm_grid.leftL{height:100%;} /* 왼쪽  하단그리드 높이 */
+.cm_grid.leftL{height:100%; border-top: 1px solid #333333;} /* 왼쪽  하단그리드 높이 */
 .cm_grid.right{height:100%;} /* 오른쪽 그리드 높이 */
+.cm_grid.tab{height:99%;}
 .cm_grid.popup{height:100%} /* 팝업 그리드 높이 */
+.cm_grid.inner{border-top: 0px;height:100%;}
 
 .cm_grid .gridHeaderTableDefault{border:0;border-right:1px solid #c8cad0;border-bottom:1px solid #c8cad0}
 .cm_grid thead.gridHeaderTableDefault{border:0}
@@ -438,6 +440,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 .w2tb_td ul{border:solid 1px #ced4d9; position:relative;}
 .w2tb_td li{padding:5px; font-weight:bold;}
 .w2tb_td li.bg{background-color:#f7f7f7; top:0;}
+.w2tb_td textarea{padding: 5px 5px 5px 5px;}
 
 .titlelistbox .titlelist_tit{ border-top:2px solid #6d7580;border-bottom:1px solid #b9c0ca;background:url(/cm/images/contents/icon_open.png) no-repeat right 15px;}
 .titlelistbox .btn_titlelist{display: block;font-weight: bold;padding: 10px 0px 10px 6px;}
@@ -2954,4 +2957,9 @@ a:hover,a:active,a:focus{text-decoration:none}
   margin: 0;
   overflow: visible;
   clip: auto;
+}
+
+.w2treeview_table_node td {
+    padding: 0 5px;
+    margin: 0;
 }
