--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -11,6 +11,7 @@
 .pgm_navi { overflow:hidden; height:40px }
 .pgm_header {overflow:hidden;/* height:40px */}
 .pgm_content { gap: 0px 5px; margin-bottom: 10px }
+.pgm_content2 { width:1280px;gap: 0px 5px; margin-bottom: 10px }
 .pgm_list { gap: 2px 0px; }
 .pgm_detail { gap: 2px 0px; }
 .pgm_sep {  }
@@ -22,7 +23,7 @@
 				/* box-shadow: 0 0 0 1px #000 inset; */
 				gap: 5px 0px;
 				}
-.popup_header { overflow:hidden; height:40px }
+.popup_header { overflow:hidden; height:50px }
 .popup_content { gap: 0px 5px; margin-bottom: 10px;  }
 
 .popup_bottom { gap: 0px 5px; margin-bottom: 10px; text-align:center; }
@@ -63,17 +64,20 @@
 
 .grdc_a_20_700 {display:grid; grid-template-columns:auto 20px 700px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_800 {display:grid; grid-template-columns:auto 20px 800px;} /* 왼쪽 오른쪽 구분선 추가 */
+.grdc_a_20_900 {display:grid; grid-template-columns:auto 20px 900px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_1000 {display:grid; grid-template-columns:auto 20px 1000px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_1200 {display:grid; grid-template-columns:auto 20px 1200px;}
 .grdc_a_20_1400 {display:grid; grid-template-columns:auto 20px 1400px;}
 .grdc_a_20_1700 {display:grid; grid-template-columns:auto 20px 1700px;}
 
+.grdc_a_50_800 {display:grid; grid-template-columns:auto 50px 800px;}
 .grdc_a_70_550 {display:grid; grid-template-columns:auto 70px 550px;}
 
 .grdc_330_20_a {display:grid; grid-template-columns:330px 20px auto;}
 
 .grdc_500_20_a {display:grid; grid-template-columns:500px 20px auto;}
 .grdc_600_20_a {display:grid; grid-template-columns:600px 20px auto;}
+.grdc_500_50_a {display:grid; grid-template-columns:500px 50px auto;}
 
 .grdc_a_20_a {display:grid; grid-template-columns:auto 20px auto;}
 
@@ -84,12 +88,14 @@
 .grdc_2f_1f {display:grid; grid-template-columns:2fr 1fr;}
 .grdc_1f_2f {display:grid; grid-template-columns:1fr 2fr;}
 .grdc_4f_20_6f {display:grid; grid-template-columns:4fr 20px 6fr;} /* 왼쪽 오른쪽 구분선 추가 */
+.grdc_5f_20_5f {display:grid; grid-template-columns:5fr 20px 5fr;} /* 왼쪽 오른쪽 구분선 추가 */
 
 .grdc_400_20_a_20_400 {display:grid; grid-template-columns:400px 20px auto 20px 400px;}
 
 .grdr_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto;}
 .grdr_41_36_a {display:grid; grid-template-rows: minmax(41px, max-content) minmax(36px, max-content) auto;}
 .grdr_36_a_40 {display:grid; grid-template-rows: minmax(36px, max-content) auto minmax(40px, max-content); }
+.grdr_36_a {display:grid; grid-template-rows: minmax(36px, max-content) auto; }
 .grdr_a_40 {display:grid; grid-template-rows: auto minmax(40px, max-content); }
 .grdr_20_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(20px, max-content) minmax(20px, max-content) auto;}
 
@@ -99,6 +105,7 @@
 .grdr_25_2_a {display:grid; grid-template-rows: minmax(25px, max-content) 2px auto;}
 .grdr_20_2_187_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 187px minmax(20px, max-content) auto;} /* 왼쪽그리드 2개 layout*/
 .grdr_20_2_200_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 200px minmax(20px, max-content) auto;} /* 왼쪽그리드 2개 layout*/
+.grdr_20_2_280_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 280px minmax(20px, max-content) auto;} 
 .grdr_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
 .grdr_20_36_250_20_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(36px, max-content) minmax(250px, max-content) minmax(20px, max-content) minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
 .grdr_20_2_250_20_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) minmax(250px, max-content) minmax(20px, max-content) minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
@@ -119,20 +126,23 @@
 
 .grdr_20_a_20_300 {display:grid; grid-template-rows: 20px auto 20px 300px;}
 .grdr_20_a_20_400 {display:grid; grid-template-rows: 20px auto 20px 400px;}
+.grdr_20_2_a_20_400 {display:grid; grid-template-rows: minmax(20px, max-content) 2px auto 20px 400px;}
+.grdr_20_2_a_20_300 {display:grid; grid-template-rows: minmax(20px, max-content) 2px auto 20px 300px;}
 .grdr_30_a_30_150 {display:grid; grid-template-rows: 30px auto 30px 150px;}
 
 .grdr_20_a_500 {display:grid; grid-template-rows: 20px auto 500px;}
 
-.grdr_20_350_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 350px 20px minmax(20px, max-content) auto;} /* 오른쪽 상하 구분선 추가 */
+.grdr_20_2_350_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 350px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_200_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 200px 20px minmax(20px, max-content) auto;}
+.grdr_20_2_200_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 200px 20px minmax(20px, max-content) 2px auto;}
 .grdr_25_a_20_20_a {display:grid; grid-template-rows: minmax(25px, max-content) auto 20px minmax(20px, max-content) auto;}
 .grdr_20_a_20_20_a_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto;}
 
-.grdr_20_180_20_20_105_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 180px minmax(20px, max-content) minmax(20px, max-content) 105px minmax(20px, max-content) minmax(20px, max-content) auto;}
+.grdr_20_2_180_20_20_2_105_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 180px minmax(20px, max-content) minmax(20px, max-content) 2px 105px minmax(20px, max-content) minmax(20px, max-content) 2px auto;}
 
-.grdr_20_100_20_20_105_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 100px minmax(20px, max-content) minmax(20px, max-content) 105px minmax(20px, max-content) minmax(20px, max-content) auto;}
+.grdr_20_2_100_20_20_2_105_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 100px minmax(20px, max-content) minmax(20px, max-content) 2px 105px minmax(20px, max-content) minmax(20px, max-content) 2px auto;}
 
-.grdr_20_300_20_20_105_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 300px minmax(20px, max-content) minmax(20px, max-content) 105px minmax(20px, max-content) minmax(20px, max-content) auto;}
+.grdr_20_2_300_20_20_2_105_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 300px minmax(20px, max-content) minmax(20px, max-content) 2px 105px minmax(20px, max-content) minmax(20px, max-content) 2px auto;}
 
 .grdr_20_180_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 180px minmax(20px, max-content) minmax(20px, max-content) auto;}
 
@@ -141,6 +151,7 @@
 .required {font-color:red;}
 
 .small_vertical_line{box-shadow: 0 0 0 3px #333 inset; margin-top: 50px; margin-bottom: 50px; width: 2px;margin-left: 10px;}
+.vertical_line2{box-shadow: 0 0 0 3px #333 inset;height: 100%;width: 2px;margin-left: 24px;}
 .vertical_line{box-shadow: 0 0 0 3px #ffffff inset;height: 100%;width: 2px;margin-left: 10px;}
 .horizontal_line{box-shadow: 0 0 0 3px #ffffff inset;height: 2px;width: 100%;margin-top: 10px;margin-bottom: 10px;}
 
@@ -155,18 +166,27 @@
 .gr_search .search_type{width: 120px;height: 21px;margin-top: 1px;margin-right: 10px;float:left;}
 .gr_search .search_auto{width: 200px;height: 21px;margin-top: 1px;float:left;}
 .gr_search .search_select{width: 200px;height: 21px;margin-top: 1px;float:left;}
-.gr_search .search_input{width: 200px;height: 21px;margin-top: 1px;float:left;}
+.gr_search .search_item{width: 100px;height: 21px;margin-top: 1px;margin-right: 10px;float:left;}
+.gr_search .search_input{width: 210px;height: 21px;margin-top: 1px;float:left;}
 
 /* 서브 헤더 */
-.gr_sub_header{position:relative;margin:0; margin-bottom:2px; height:23px}
-.gr_sub_header .btn_sub_generator{position:absolute;right:2px}
+.gr_sub_header{position:relative;margin:0;margin-bottom:0px;}
+.gr_sub_header .btn_sub_generator{position:absolute;right:2px; height:50px}
 .gr_sub_header .btn_sub_generator .btn_gcm{left:0px;top:0px;margin-right: 5px;}
 .gr_sub_header .defaultbox{float:left; position:relative; margin-right: 7px;}
 .gr_sub_header .check{float:left; position:absolute; margin-top: 3px; min-width: 200px;}
 
+.gr_map_header{position:relative;margin:0; margin-bottom:2px; height:23px}
+.gr_map_header .btn_sub_generator{position:absolute;right:2px;top:-1px}
+.gr_map_header .btn_sub_generator .btn_gcm{left:0px;top:0px;margin-right: 5px;}
+.gr_map_header .defaultbox{float:left; position:relative; margin-right: 7px;}
+.gr_map_header .check{float:left; position:absolute; margin-top: 3px; min-width: 200px;}
+
 .gr_sub_search{position:relative;padding: 8px 21px;margin:0;border:1px solid #ced4d9;border-top: 2px solid #333333;background:#f7f7f7;margin-bottom:10px;height:23px;}
 .gr_sub_search .label{float:left;position:relative;margin-top: 4px;margin-right: 7px;font-weight: bold;}
-.gr_sub_search .search_input{width: 200px;height: 21px;margin-top: 1px;float:left;}
+.gr_sub_search .search_select{width: 200px;height: 21px;margin-top: 1px;float:left;}
+.gr_sub_search .search_input{width: 210px;height: 21px;margin-top: 1px;float:left;}
+.gr_sub_search .search_calendar{width: 150px;height: 23px;margin-top: 1px;float:left;}
 
 
 
