--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -454,7 +454,8 @@ body {
 .tac_layout .w2tabcontrol_tabhost{height:36px; z-index: 1;}
 .tac_layout .w2tabcontrol_control .scroll{left:0px !important;}
 .tac_layout .w2tabcontrol_container{position: absolute; left:0; top:35px; right:0; bottom:40px; border:none; float:none; height:auto !important; border-top:1px solid #c4cad6;}
-.tac_layout .w2tabcontrol_contents_wrapper{position: absolute; left: 0; right: 0; top: 0; bottom: 0; height: auto !important; overflow: auto; background: #fff;  border-width: 0px 1px 1px 1px; border-style: solid; border-color: #c4cad6; box-sizing:border-box;}
+
+.tac_layout .w2tabcontrol_contents_wrapper{position: absolute; left: 0; right: 0; top: 0; bottom: 0; height: auto !important; overflow: auto; background: #fff;  border-width: 0px 1px 1px 1px;/*  border-style: solid;  */border-color: #c4cad6; box-sizing:border-box;}
 .tac_layout .w2tabcontrol_contents_wrapper.w2iframe{height:inherit !important}
 /* active */
 .tac_layout .w2tabcontrol_tabhost .w2tabcontrol_tab_left,
