[백승종] 수정사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -10,8 +10,9 @@
 				}
 .pgm_navi { overflow:hidden; height:40px }
 .pgm_header {overflow:hidden;/* height:40px */}
-.pgm_content { gap: 0px 5px; margin-bottom: 10px }
-.pgm_content2 { width:1280px;gap: 0px 5px; margin-bottom: 10px }
+.pgm_content { gap: 0px 5px; margin-bottom: 5px }
+.pgm_content2 { width:1280px;gap: 0px 5px; margin-bottom: 5px }
+.pgm_main { gap: 0px 5px; margin-bottom: 10px }
 .pgm_list { gap: 2px 0px; }
 .pgm_detail { gap: 2px 0px; }
 .pgm_sep {  }
@@ -166,8 +167,9 @@
 .gr_search .search_type{width: 120px;height: 21px;margin-top: 1px;margin-right: 10px;float:left;}
 .gr_search .search_auto{width: 200px;height: 21px;margin-top: 1px;float:left;}
 .gr_search .search_select{width: 200px;height: 21px;margin-top: 1px;float:left;}
-.gr_search .search_item{width: 100px;height: 21px;margin-top: 1px;margin-right: 10px;float:left;}
+.gr_search .search_type_100{width: 100px;height: 21px;margin-top: 1px;margin-right: 10px;float:left;}
 .gr_search .search_input{width: 210px;height: 21px;margin-top: 1px;float:left;}
+.gr_search .search_calendar{width: 150px;height: 23px;margin-top: 1px;float:left;}
 
 /* 서브 헤더 */
 .gr_sub_header{position:relative;margin:0;margin-bottom:0px;}
