--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -463,12 +463,12 @@ body {
 .tac_layout .w2tabcontrol_tabhost .w2tabcontrol_tab_right{background:none;}
 /* mask */
 .tac_layout .w2tabcontrol_control .mask{left:0;right:90px;margin-left:0;}
-.tac_layout .w2tabcontrol_control .btn_scrollLeft{right:66px;}
-.tac_layout .w2tabcontrol_control .btn_scrollRight{right:46px;}
-.tac_layout .w2tabcontrol_control .btn_submenu{right:23px;}
+.tac_layout .w2tabcontrol_control .btn_scrollLeft{right:66px;display:none}
+.tac_layout .w2tabcontrol_control .btn_scrollRight{right:46px;display:none}
+.tac_layout .w2tabcontrol_control .btn_submenu{right:23px;display:none}
 .tac_layout .w2tabcontrol_tab_close, .tac_layout .w2tabcontrol_tab_close2{top: 3px;background:url(/cm/images/inc/icon_mdi_close2.png) no-repeat left top; width:11px; right:5px; left:auto; top:5px;}
 
-.btn_closeAll{display:inline-block; z-index:1; text-indent:-9999px; position:absolute; width:20px; height:19px; right:5px; top:9px; background:url(/cm/images/contents/close_off.png) no-repeat left top;}
+.btn_closeAll{display:none; z-index:1; text-indent:-9999px; position:absolute; width:20px; height:19px; right:5px; top:9px; background:url(/cm/images/contents/close_off.png) no-repeat left top;}
 .btn_CloseAll:hover{background-image:url(/cm/images/contents/close_on.png);}
 
 .bms_visual{
