[양현우] GridView css 클래스 req 추가

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -232,6 +232,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 .cm_grid thead.gridHeaderTableDefault{border:0}
 .cm_grid nobr{display:inline-block}
 .cm_grid th.gridHeaderTDDefault{border:1px solid #c8cad0;border-width:1px 0 0 1px;color:#3b3b3b;background: #f7f7f7;height:25px;}
+.cm_grid th.req{color:#e74c3c;}
 .cm_grid tr:first-child th.gridHeaderTDDefault{border-top:0;height:25px;}
 .cm_grid .gridBodyDefault{border:1px solid #c8cad0;border-width:1px 0 0 1px;color:#3b3b3b}
 .cm_grid .gridFooterTDDefault{background: #f7f7f7;border-width:0 0 0 0;}
@@ -239,7 +240,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 .cm_grid button.w2inputCalendar_button {border:0; border-radius:0 !important;}
 .cm_grid .gridBodyDefault button{background: gainsboro; border-radius: 10px;  cursor: pointer;}
 .cm_grid .gridBodyDefault button:hover{background:skyblue;}
-.cm_grid .req{background-color:#fffdd8}
+.cm_grid .req{background-color:#fffdd8;}
 
 /* tabControl */
 .cm_tabmenu{position:relative;padding:0;margin:0;margin:0}/* margin:15px 0 0 */
