[고병수] 음성예약관리 노선목록 -> 코스목록 수정, css수정사항

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -87,6 +87,7 @@
 .grdc_200_1f_1f {display:grid; grid-template-columns:200px 1fr 1fr;}
 .grdc_2f_1f {display:grid; grid-template-columns:2fr 1fr;}
 .grdc_1f_2f {display:grid; grid-template-columns:1fr 2fr;}
+.grdc_3f_20_7f {display:grid; grid-template-columns:3fr 20px 7fr;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_4f_20_6f {display:grid; grid-template-columns:4fr 20px 6fr;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_5f_20_5f {display:grid; grid-template-columns:5fr 20px 5fr;} /* 왼쪽 오른쪽 구분선 추가 */
 
