[양현우] head 세종도시교통공사 사진 제거, grid css 변경

--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -241,7 +241,7 @@ body {
 }
 
 /* Header */
-.head_top{position:relative;height:44px;background: #ffffff url(/cm/images/add/logo_bg.png) no-repeat 99% 7px;}
+.head_top{position:relative;height:44px;background: #ffffff /* url(/cm/images/add/logo_bg.png) */ no-repeat 99% 7px;}
 .head_top a.logo{display:block;position:absolute;left: 28px;top: 11px;width:211px;height:22px;background: #daf3d6 url('/cm/images/add/logo.png') no-repeat 0 0;}
 .head_top a.logo > img {display: none;}
 .sysbtnbox{position:absolute;top: 55px;right: 330px;height: 23px;z-index: 999;}
