--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -109,6 +109,7 @@
 .grdr_20_2_187_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 187px minmax(20px, max-content) auto;} /* 왼쪽그리드 2개 layout*/
 .grdr_20_2_200_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 200px minmax(20px, max-content) auto;} /* 왼쪽그리드 2개 layout*/
 .grdr_20_2_280_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 280px minmax(20px, max-content) auto;} 
+.grdr_20_2_350_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 350px minmax(20px, max-content) auto;} 
 .grdr_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
 .grdr_20_36_250_20_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(36px, max-content) minmax(250px, max-content) minmax(20px, max-content) minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
 .grdr_20_2_250_20_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) minmax(250px, max-content) minmax(20px, max-content) minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
@@ -137,12 +138,15 @@
 
 .grdr_20_2_350_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 350px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_2_250_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 250px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
+.grdr_20_2_300_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 300px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_200_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 200px 20px minmax(20px, max-content) auto;}
 .grdr_20_2_200_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 200px 20px minmax(20px, max-content) 2px auto;}
 .grdr_25_a_20_20_a {display:grid; grid-template-rows: minmax(25px, max-content) auto 20px minmax(20px, max-content) auto;}
 .grdr_20_a_20_20_a_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto;}
 
+.grdr_20_2_180_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 180px minmax(20px, max-content) minmax(20px, max-content) 2px auto;}
 .grdr_20_2_180_20_20_2_105_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 180px minmax(20px, max-content) minmax(20px, max-content) 2px 105px minmax(20px, max-content) minmax(20px, max-content) 2px auto;}
+
 
 .grdr_20_2_100_20_20_2_105_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 100px minmax(20px, max-content) minmax(20px, max-content) 2px 105px minmax(20px, max-content) minmax(20px, max-content) 2px auto;}
 
@@ -157,7 +161,7 @@
 
 .small_vertical_line{box-shadow: 0 0 0 3px #333 inset; margin-top: 50px; margin-bottom: 50px; width: 2px;margin-left: 10px;}
 .vertical_line2{box-shadow: 0 0 0 3px #333 inset;height: 100%;width: 2px;margin-left: 24px;}
-.vertical_line{box-shadow: 0 0 0 3px #eb4545 inset;height: 100%;width: 2px;margin-left: 10px;}
+.vertical_line{box-shadow: 0 0 0 3px #eb4545 inset;height: 100%;width: 2px;margin-left: 9px;}
 .horizontal_line{box-shadow: 0 0 0 3px #eb4545 inset;height: 2px;width: 100%;margin-top: 10px;margin-bottom: 10px;}
 
 /* 상단 검색창 */
