--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -69,6 +69,7 @@
 .grdc_a_20_900_minmax {display:grid; grid-template-columns:minmax(380px, auto) 20px 900px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_1000 {display:grid; grid-template-columns:auto 20px 1000px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_1200 {display:grid; grid-template-columns:auto 20px 1200px;}
+.grdc_a_20_1200_minmax {display:grid; grid-template-columns:minmax(380px, auto) 20px 1200px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_1400 {display:grid; grid-template-columns:auto 20px 1400px;}
 .grdc_a_20_1700 {display:grid; grid-template-columns:auto 20px 1700px;}
 
@@ -136,11 +137,13 @@
 
 .grdr_20_a_500 {display:grid; grid-template-rows: 20px auto 500px;}
 
-.grdr_20_2_350_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 350px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
-.grdr_20_2_250_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 250px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
-.grdr_20_2_300_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 300px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
-.grdr_20_200_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 200px 20px minmax(20px, max-content) auto;}
+.grdr_20_2_150_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 150px 20px minmax(20px, max-content) 2px auto;}
 .grdr_20_2_200_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 200px 20px minmax(20px, max-content) 2px auto;}
+.grdr_20_2_250_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 250px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
+.grdr_20_2_280_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 280px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
+.grdr_20_2_300_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 300px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
+.grdr_20_2_350_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 350px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
+.grdr_20_200_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 200px 20px minmax(20px, max-content) auto;}
 .grdr_25_a_20_20_a {display:grid; grid-template-rows: minmax(25px, max-content) auto 20px minmax(20px, max-content) auto;}
 .grdr_20_a_20_20_a_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto;}
 
@@ -152,6 +155,7 @@
 
 .grdr_20_2_300_20_20_2_105_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 300px minmax(20px, max-content) minmax(20px, max-content) 2px 105px minmax(20px, max-content) minmax(20px, max-content) 2px auto;}
 
+.grdr_20_100_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 100px minmax(20px, max-content) minmax(20px, max-content) 2px auto;}
 .grdr_20_180_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 180px minmax(20px, max-content) minmax(20px, max-content) auto;}
 .grdr_20_180_20_20_105_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 180px minmax(20px, max-content) minmax(20px, max-content) 105px minmax(20px, max-content) minmax(20px, max-content) auto;}
 
