--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -73,6 +73,7 @@
 
 .grdc_a_50_800 {display:grid; grid-template-columns:auto 50px 800px;}
 .grdc_a_70_550 {display:grid; grid-template-columns:auto 70px 550px;}
+.grdc_a_70_550_minmax {display:grid; grid-template-columns:minmax(370px, auto) 70px 550px;}
 
 .grdc_330_20_a {display:grid; grid-template-columns:330px 20px auto;}
 
@@ -137,6 +138,7 @@
 .grdr_20_2_350_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 350px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_200_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 200px 20px minmax(20px, max-content) auto;}
 .grdr_20_2_200_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 200px 20px minmax(20px, max-content) 2px auto;}
+.grdr_20_2_130_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 130px 20px minmax(20px, max-content) 2px auto;}
 .grdr_25_a_20_20_a {display:grid; grid-template-rows: minmax(25px, max-content) auto 20px minmax(20px, max-content) auto;}
 .grdr_20_a_20_20_a_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto;}
 
