[양현우] 시설물 상태 모니터링 레이아웃

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -129,6 +129,7 @@
 .grdr_20_300_a {display:grid; grid-template-rows: minmax(20px, max-content) 300px auto;}
 
 .grdr_20_300_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 300px minmax(20px, max-content) auto;}
+.grdr_20_500_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 500px minmax(20px, max-content) auto;}
 
 .grdr_20_a_20_300 {display:grid; grid-template-rows: 20px auto 20px 300px;}
 .grdr_20_a_20_400 {display:grid; grid-template-rows: 20px auto 20px 400px;}
