--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -63,6 +63,8 @@
 .grdc_a_100 {display:grid; grid-template-columns:auto 100px;}
 .grdc_a_50 {display:grid; grid-template-columns:auto 50px;}
 
+.grdc_a_20_400 {display:grid; grid-template-columns:auto 20px 400px;} /* 왼쪽 오른쪽 구분선 추가 */
+.grdc_a_20_450 {display:grid; grid-template-columns:auto 20px 450px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_700 {display:grid; grid-template-columns:auto 20px 700px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_800 {display:grid; grid-template-columns:auto 20px 800px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_900 {display:grid; grid-template-columns:auto 20px 900px;} /* 왼쪽 오른쪽 구분선 추가 */
@@ -91,9 +93,12 @@
 .grdc_200_1f_1f {display:grid; grid-template-columns:200px 1fr 1fr;}
 .grdc_2f_1f {display:grid; grid-template-columns:2fr 1fr;}
 .grdc_1f_2f {display:grid; grid-template-columns:1fr 2fr;}
+.grdc_2f_20_8f {display:grid; grid-template-columns:2fr 20px 8fr;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_3f_20_7f {display:grid; grid-template-columns:3fr 20px 7fr;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_4f_20_6f {display:grid; grid-template-columns:4fr 20px 6fr;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_5f_20_5f {display:grid; grid-template-columns:5fr 20px 5fr;} /* 왼쪽 오른쪽 구분선 추가 */
+.grdc_7f_20_3f {display:grid; grid-template-columns:7fr 20px 3fr;} /* 왼쪽 오른쪽 구분선 추가 */
+.grdc_15f_20_5f {display:grid; grid-template-columns:15fr 20px 5fr;} /* 왼쪽 오른쪽 구분선 추가 */
 
 .grdc_400_20_a_20_400 {display:grid; grid-template-columns:400px 20px auto 20px 400px;}
 
