[양현우] 지도 showMarker 클릭 이벤트 추가, 메소드 장치 상태에 따라 지도 오버레이 변경

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -211,6 +211,8 @@ a:hover,a:active,a:focus{text-decoration:none}
 .tb.calendar tr td .txt_num{position:absolute;left:5px; top:5px;}
 
 /* grid */
+.cond_abnormal {background:#F78181;}
+.cond_normal {background:#A9F5A9;}
 .cm_gridbox{position:relative;padding:0;margin:0;}
 .cm_grid{
 		 /* border-top:2px solid rgba(0,61,124,1); */
@@ -595,6 +597,16 @@ a:hover,a:active,a:focus{text-decoration:none}
     background: url(/cm/images/tmap/vertex_white.png);
 }
 
+.conderror {
+    background: red;
+    position: relative;
+    bottom: 57px;
+    left:2px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    border-bottom: 2px solid #ddd;
+    float: left;
+}
 
 .busoverlay {
     background: #9292f3;
