--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -598,7 +598,8 @@ a:hover,a:active,a:focus{text-decoration:none}
 }
 
 .conderror {
-    background: red;
+    background: #eb4545;
+    color : white;
     position: relative;
     bottom: 57px;
     left:2px;
@@ -606,6 +607,17 @@ a:hover,a:active,a:focus{text-decoration:none}
     border: 1px solid #ccc;
     border-bottom: 2px solid #ddd;
     float: left;
+}
+
+.conderror:after {
+    content: '';
+    position: absolute;
+    margin-left: -12px;
+    left: 50%;
+    bottom: -12px;
+    width: 22px;
+    height: 12px;
+    background: url(/cm/images/tmap/vertex_red.png);
 }
 
 .busoverlay {
@@ -630,6 +642,54 @@ a:hover,a:active,a:focus{text-decoration:none}
 .busoverlay:nth-of-type(n) {
     border: 0;
     box-shadow: 0px 1px 2px #888;
+}
+
+/* 지도 카테고리 관련*/
+.map_wrap, .map_wrap * {margin:0; padding:0;font-family:'Malgun Gothic',dotum,'돋움',sans-serif;font-size:12px;}
+.map_wrap {position:relative;width:100%;height:350px;}
+#category {position:absolute;top:10px;left:10px;border-radius: 5px; border:1px solid #909090;box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);background: #fff;overflow: hidden;z-index: 2;}
+#category li {float:left;list-style: none;width:50px;px;border-right:1px solid #acacac;padding:6px 0;text-align: center; cursor: pointer;}
+#category li.on {background: #eee;}
+#category li:hover {background: #ffe6e6;border-left:1px solid #acacac;margin-left: -1px;}
+#category li:last-child{margin-right:0;border-right:0;}
+#category li span {display: block;margin:0 auto 3px;width:27px;height: 28px;}
+/* #category li .category_bg {background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/places_category.png) no-repeat;}
+#category li .bank {background-position: -10px 0;}
+#category li .mart {background-position: -10px -36px;}
+#category li .pharmacy {background-position: -10px -72px;}
+#category li .oil {background-position: -10px -108px;}
+#category li .cafe {background-position: -10px -144px;}
+#category li .store {background-position: -10px -180px;}
+#category li.on .category_bg {background-position-x:-46px;} */
+
+#category li .normal_busimg
+{
+	background:url(/cm/images/tmap/busstop.png) no-repeat;
+}
+
+#category li .abnormal_busimg
+{
+	background:url(/cm/images/tmap/busstop_black.png) no-repeat;
+}
+
+#category li .crossimg
+{
+	background:url(/cm/images/tmap/cross.png) no-repeat;
+}
+
+#category li .voiceimg
+{
+	background:url(/cm/images/tmap/voice_node.png) no-repeat;
+}
+
+#category li .verteximg
+{
+	background:url(/cm/images/tmap/vertex.png) no-repeat;
+}
+
+#category li .roadimg
+{
+	background:url(/cm/images/tmap/road_trans.png) no-repeat;
 }
 
 /* 지현추가 : font-awesome.css */
