[고병수] 정류소 정보 모니터링

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -83,6 +83,7 @@
 
 .grdc_500_20_a {display:grid; grid-template-columns:500px 20px auto;}
 .grdc_600_20_a {display:grid; grid-template-columns:600px 20px auto;}
+.grdc_500_20_900_20_a {display:grid; grid-template-columns:500px 20px 900px 20px auto;}
 .grdc_500_50_a {display:grid; grid-template-columns:500px 50px auto;}
 
 .grdc_a_20_a {display:grid; grid-template-columns:auto 20px auto;}
@@ -117,6 +118,7 @@
 .grdr_20_2_200_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 200px minmax(20px, max-content) auto;} /* 왼쪽그리드 2개 layout*/
 .grdr_20_2_280_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 280px minmax(20px, max-content) auto;} 
 .grdr_20_2_350_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 350px minmax(20px, max-content) auto;} 
+.grdr_20_2_400_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 400px minmax(20px, max-content) auto;} 
 .grdr_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
 .grdr_20_36_250_20_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(36px, max-content) minmax(250px, max-content) minmax(20px, max-content) minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
 .grdr_20_2_250_20_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) minmax(250px, max-content) minmax(20px, max-content) minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
@@ -149,6 +151,7 @@
 .grdr_20_2_250_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 250px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_2_280_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 280px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_2_300_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 300px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
+.grdr_20_2_300_40_25_20_150_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 300px minmax(40px, max-content) minmax(25px, max-content) 20px 150px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_2_350_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 350px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_200_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 200px 20px minmax(20px, max-content) auto;}
 .grdr_20_2_200_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 200px 20px minmax(20px, max-content) 2px auto;}
