--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -507,6 +507,22 @@ body {
 	background-position: center; */
 }
 
+.brt_bit{
+	background-image: url('/cm/images/brt/BIT-RED.png');
+	background-repeat: no-repeat;
+	height: 600px;
+	background-position: top;
+	/* margin-right: auto;
+	margin-left: auto;
+	 */
+	/* width: 100%;
+	height: 100vh;
+	background-image: url('/cm/images/inc/bms_visual.png');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center; */
+}
+
 .brt_cont_left li{display:block; overflow:hidden; margin-bottom:20px; }
 .brt_cont_left li ul {position:relative; overflow:hidden; height:100px; border: 1px solid #333;}
 .brt_cont_left li ul li{position:absolute; left: 120px;}
