--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -122,6 +122,7 @@
 .grdr_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
 .grdr_20_36_250_20_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(36px, max-content) minmax(250px, max-content) minmax(20px, max-content) minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
 .grdr_20_2_250_20_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) minmax(250px, max-content) minmax(20px, max-content) minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
+.grdr_20_2_170_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) minmax(170px, max-content) minmax(20px, max-content) minmax(20px, max-content) auto;}
 
 .grdr_30_40_a {display:grid; grid-template-rows: 30px 40px auto;}
 .grdr_40_40_a {display:grid; grid-template-rows: 40px 40px auto;}
