[양현우] 실시간 위치정보 모니터링 탭목록 이미지로 수정, 클릭 이벤트 수정, search 수정, 노선 수정

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -692,6 +692,39 @@ a:hover,a:active,a:focus{text-decoration:none}
 	background:url(/cm/images/tmap/road_trans.png) no-repeat;
 }
 
+.moni_img 
+{   position: relative;
+    /* top: 10px; */
+    /* left: 10px; */
+    width: 305px;
+    border-radius: 5px;
+    border: 1px solid #909090;
+    box-shadow: 0 1px 1px rgb(0 0 0 / 40%);
+    background: #fff;
+    overflow: hidden;
+    z-index: 2;
+    bottom: 5px;}
+.moni_img li {float:left;list-style: none;width:50px;px;border-right:1px solid #acacac;padding:6px 0;text-align: center; cursor: pointer; width: 100px;}
+.moni_img li.on {background: #eee;}
+.moni_img li:hover {background: #ffe6e6;border-left:1px solid #acacac;margin-left: -1px;}
+.moni_img li:last-child{margin-right:0;border-right:0;}
+.moni_img li span {display: block;margin:0 auto 3px;width:27px;height: 28px;}
+.moni_img li .busimg
+{
+	background:url(/cm/images/tmap/bus_red.png) no-repeat;	
+}
+
+.moni_img li .sttnimg
+{
+	background:url(/cm/images/tmap/busstop.png) no-repeat;		
+}
+
+.moni_img li .crossimg
+{
+	background:url(/cm/images/tmap/cross.png) no-repeat;		
+}
+
+
 /* 지현추가 : font-awesome.css */
 
 /*!
