--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -621,7 +621,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 }
 
 .busoverlay {
-    background: #9292f3;
+    background: #fff;
     position: relative;
     bottom: 57px;
     left:2px;
@@ -629,6 +629,17 @@ a:hover,a:active,a:focus{text-decoration:none}
     border: 1px solid #ccc;
     border-bottom: 2px solid #ddd;
     float: left;
+}
+
+.busoverlay:after {
+    content: '';
+    position: absolute;
+    margin-left: -12px;
+    left: 50%;
+    bottom: -12px;
+    width: 22px;
+    height: 12px;
+    background: url(/cm/images/tmap/vertex_white.png);
 }
 
 .busoverlay .map_title {
