[양현우] 실시간 위치정보 모니터링 운행 현황 레이아웃 추가, 차내장치 모니터링 그리드 변경

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -735,6 +735,48 @@ a:hover,a:active,a:focus{text-decoration:none}
 	background:url(/cm/images/tmap/cross.png) no-repeat;		
 }
 
+.map_busstatus
+{
+    border-top: 1px solid #ddd;
+    border-left: 1px solid #ddd;
+    margin-bottom: 5px;
+    background-color: #fff;
+    z-index : 3;
+    float: right;
+    top: 10px;
+    right: 10px;
+    position: absolute;    
+}
+
+.map_busstatus th
+{
+	border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 7px;
+    background-color: #f8f8f8;
+    color: #333;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.map_busstatus td
+{
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 7px;
+    font-size: 10px;	
+}
+
+.map_busstatus .status_kinds
+{
+	text-align : center;
+	width : 60px;
+}
+
+.map_busstatus .status_count
+{
+	text-align : right;
+}
 
 /* 지현추가 : font-awesome.css */
 
